kubernetes/mlflow-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
      tier: server
  template:
    metadata:
      labels:
        app: mlflow
        tier: server
    spec:
      containers:
      - name: mlflow-server
        image: eu.gcr.io/xebikart-dev-1/mlflow:1.3.0
        args: [
          "server",
          "--backend-store-uri", "/mnt/local_storage",
          "--default-artifact-root", "gs://xebikart-mlflow-artifacts/",
          "--host", "0.0.0.0"]
        volumeMounts:
          - name: "service-account"
            mountPath: "/var/run/secret/cloud.google.com"
        ports:
          - containerPort: 5000
      volumes:
        - name: "service-account"
          secret:
            secretName: "apps-sa-key"
