kubernetes/mlflow-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-server-nodeport
spec:
  selector:
    app: mlflow
    tier: server
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
